manifests/traefik-v2/templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-v2
  annotations:
    ingressclass.kubernetes.io/is-default-class: false
spec:
  controller: traefik.io/ingress-controller
